added week 7 discussion activity

--- a/course-materials/assignments/HW4.qmd
+++ b/course-materials/assignments/HW4.qmd
@@ -78,7 +78,7 @@ All component visualizations must be produced using code (e.g. leveraging the `{
 
 [**Regardless of which option you choose, you are expected to consider all design elements discussed throughout the quarter, implement as appropriate, and justify your decisions.**]{.teal-text} These include, but are not limited to:
 
-1. graphic form (you are **not** limited to just those fundamental chart types discussed in weeks 2 & 4 -- explore other advanced chart types and don't be afraid to get really creative with it; check out some of these awesome [data viz creators](../../resources.qmd#inspirational-data-visualization-creators){target="_blank"} to find inspiration)
+1. graphic form (you are **not** limited to just those fundamental chart types discussed in weeks 2 & 4 -- explore other chart types and don't be afraid to get really creative with it; check out some of these awesome [data viz creators](../../resources.qmd#inspirational-data-visualization-creators){target="_blank"} to find inspiration)
 2. text (e.g. titles, captions, annotations, axis labels, axis ticks, alt text)
 3. themes (i.e. all non-data plot elements; these should be intentionally modified and visually-pleasing)
 4. colors
