--- a/course-materials/lecture-slides/lecture2.1-choosing-graphic-forms-slides.qmd
+++ b/course-materials/lecture-slides/lecture2.1-choosing-graphic-forms-slides.qmd
@@ -432,6 +432,28 @@ It would be hard to use a method of encoding from the top of the hierarchy! In t
 
 ---
 
+## {#beyond-scatter-plots data-menu-title="Beyond scatter plots"}
+
+[Unique visualizations are important!]{.slide-title2}
+
+<hr>
+
+>*"Charts are often designed to persuade, educate, and motivate. Designing for serendipitous discovery, educational impact, hedonic response, or changes in behavior is in some cases only tangentially connected with the precision of a particular visualization"*
+
+```{r}
+#| eval: true
+#| echo: false
+#| out-width: "100%"
+#| fig-align: "center"
+knitr::include_graphics("images/week2/Bertini-etal.png")
+```
+
+::: {.footer}
+Bertini E, Correll M, Franconeri S (2020) [Why Shouldn't All Charts Be Scatter Plots? Beyond Precision-Driven Visualizations](https://arxiv.org/pdf/2008.11310){target="_blank}. IEEE Visualization Conference (VIS), pp 206-210.
+:::
+
+---
+
 ## {#tips0 data-menu-title="Tips for choosing a graph"}
 
 [Tips for choosing the right graphic form]{.slide-title}
@@ -440,7 +462,7 @@ It would be hard to use a method of encoding from the top of the hierarchy! In t
 
 . . .
 
-1. [**Think about the task(s) you want to enable or message(s) you want to convey.**]{.teal-text} For example, do you want to compare, see change or flow, reveal relationships or connections, envision temporal or spatial patterns.
+1. [**Think about the task(s) you want to enable or message(s) you want to convey.**]{.teal-text} For example, do you want to compare, see change or flow, reveal relationships or connections, envision temporal or spatial patterns, show big picture trends or allow for comparisons of individual values.
 
 . . .
 
@@ -470,7 +492,7 @@ It would be hard to use a method of encoding from the top of the hierarchy! In t
 
 <hr>
 
-1. [**Think about the task(s) you want to enable or message(s) you want to convey.**]{.teal-text} For example, do you want to compare, see change or flow, reveal relationships or connections, envision temporal or spatial patterns.
+1. [**Think about the task(s) you want to enable or message(s) you want to convey.**]{.teal-text} For example, do you want to compare, see change or flow, reveal relationships or connections, envision temporal or spatial patterns, show big picture trends or allow for comparisons of individual values.
 
 2. [**Consider the number of variables and the number of data points, as well as the data types you're working with.**]{.teal-text} For example, do you have several vs. many data points? How many categorical and / or numeric variables? Are your variables ordered or not ordered? Data types can dictate which graphical form is appropriate.
 
@@ -684,7 +706,7 @@ knitr::include_graphics("images/week2/horst-nom-org-binary.png")
 
 <hr>
 
-1. [**Think about the task(s) you want to enable or message(s) you want to convey.** For example, do you want to compare, see change or flow, reveal relationships or connections, envision temporal or spatial patterns.]{.gray-text}
+1. [**Think about the task(s) you want to enable or message(s) you want to convey.** For example, do you want to compare, see change or flow, reveal relationships or connections, envision temporal or spatial patterns, show big picture trends or allow for comparisons of individual values.]{.gray-text}
 
 2. [**Consider the number of variables and the number of data points, as well as the data types you're working with.** For example, do you have several vs. many data points? How many categorical and/or numeric variables? Are your variables ordered or not ordered? Data types can dictate which graphical form is appropriate.]{.gray-text}
 
@@ -849,7 +871,7 @@ joined_precip_geom |>
 
 <hr>
 
-1. [**Think about the task(s) you want to enable or message(s) you want to convey.** For example, do you want to compare, see change or flow, reveal relationships or connections, envision temporal or spatial patterns.]{.gray-text}
+1. [**Think about the task(s) you want to enable or message(s) you want to convey.** For example, do you want to compare, see change or flow, reveal relationships or connections, envision temporal or spatial patterns, show big picture trends or allow for comparisons of individual values.]{.gray-text}
 
 2. [**Consider the number of variables and the number of data points, as well as the data types you're working with.** For example, do you have several vs. many data points? How many categorical and/or numeric variables? Are your variables ordered or not ordered? Data types can dictate which graphical form is appropriate.]{.gray-text}
 
@@ -1079,7 +1101,7 @@ Example from Claus Wilke's, [Fundamentals of Data Visualization](https://clauswi
 
 <hr>
 
-1. [**Think about the task(s) you want to enable or message(s) you want to convey.** For example, do you want to compare, see change or flow, reveal relationships or connections, envision temporal or spatial patterns.]{.gray-text}
+1. [**Think about the task(s) you want to enable or message(s) you want to convey.** For example, do you want to compare, see change or flow, reveal relationships or connections, envision temporal or spatial patterns, show big picture trends or allow for comparisons of individual values.]{.gray-text}
 
 2. [**Consider the number of variables and the number of data points, as well as the data types you're working with.** For example, do you have several vs. many data points? How many categorical and/or numeric variables? Are your variables ordered or not ordered? Data types can dictate which graphical form is appropriate.]{.gray-text}
 
@@ -1292,37 +1314,37 @@ knitr::include_graphics("images/week2/gun-deaths-revised.png")
 
 ::::
 
----
+<!-- --- -->
 
-## {#critique-considerations data-menu-title="Critique considerations"}
+<!-- ## {#critique-considerations data-menu-title="Critique considerations"} -->
 
-[5. Test the outcomes of your graphic on others]{.slide-title2}
+<!-- [5. Test the outcomes of your graphic on others]{.slide-title2} -->
 
-<hr>
+<!-- <hr> -->
 
-<br>
+<!-- <br> -->
 
-[**Critiquing a data visualization:**]{.teal-text .body-text-l}
+<!-- [**Critiquing a data visualization:**]{.teal-text .body-text-l} -->
 
-1. Identify the primary and secondary insights that the graphic is trying to convey.
+<!-- 1. Identify the primary and secondary insights that the graphic is trying to convey. -->
 
-. .  .
+<!-- . .  . -->
 
-2. Identify elementary perceptual tasks (e.g. comparing lengths, angles) and what is confusing or difficult to do.
+<!-- 2. Identify elementary perceptual tasks (e.g. comparing lengths, angles) and what is confusing or difficult to do. -->
 
-. .  .
+<!-- . .  . -->
 
-3. Identify if it's possible (*and* if it makes sense) to use more effective elementary perceptual tasks for the primary and secondary insights
+<!-- 3. Identify if it's possible (*and* if it makes sense) to use more effective elementary perceptual tasks for the primary and secondary insights -->
 
-. .  .
+<!-- . .  . -->
 
-4. Identify points of confusion and decide how those could be addressed (e.g. a different graphic form, rearranging components, including an introduction graph, better annotation)
+<!-- 4. Identify points of confusion and decide how those could be addressed (e.g. a different graphic form, rearranging components, including an introduction graph, better annotation) -->
 
-::: footer
-::: {.center-text .gray-text}
-Adapted from Derek L. Sonderegger's online textbook, [STA 141 - Exploratory Data Analysis and Visualization](https://bookdown.org/dereksonderegger/141/12-critiques.html)
-:::
-:::
+<!-- ::: footer -->
+<!-- ::: {.center-text .gray-text} -->
+<!-- Adapted from Derek L. Sonderegger's online textbook, [STA 141 - Exploratory Data Analysis and Visualization](https://bookdown.org/dereksonderegger/141/12-critiques.html) -->
+<!-- ::: -->
+<!-- ::: -->
 
 ---
 
