--- a/course-materials/lecture-slides/lecture5.1-good-viz-slides.qmd
+++ b/course-materials/lecture-slides/lecture5.1-good-viz-slides.qmd
@@ -921,6 +921,29 @@ knitr::include_graphics("images/week5/x-y-best.png")
 Example from [Fundamentals of Data Visualization](https://clauswilke.com/dataviz/balance-data-context.html){target="_blank"}, by Claus Wilke
 :::
 
+---
+
+## {#TED-talk data-menu-title="Watch this TED talk"} 
+
+[Watch this TED talk!]{.slide-title}
+
+<hr>
+
+I *highly* recommend watching this awesome TED talk, [The beauty of data visualization](https://www.ted.com/talks/david_mccandless_the_beauty_of_data_visualization?referrer=playlist-making_sense_of_too_much_data&subtitle=en){target="_blank"}, by [David McCandless](){target="_blank"}. David does a fabulous job of showing the importance of providing context in your data visualizations.
+
+```{r}
+#| eval: true
+#| echo: false
+#| out-width: "80%"
+#| fig-align: "center"
+knitr::include_graphics("images/week5/billion-pound-o-gram.png")
+```
+
+<br>
+
+::: {.footer}
+Source: [The Billion Dollar O Gram](https://informationisbeautiful.net/visualizations/the-billion-dollar-gram/){target="_blank"}
+:::
 
 ---
 
