--- a/course-materials/week7.qmd
+++ b/course-materials/week7.qmd
@@ -33,13 +33,13 @@ From here on out, we'll be using discussion sections to share drafts of final pr
 
 <!-- Add *one* of your draft data vizualizations to your slide -->
 
-[HW #3](assignments/HW3.qmd){target="_blank"}, asks you to draft all three required visualizations for your chosen [final project (HW #4)](assignments/HW4.qmd){target="_blank"} option. Find your assigned slide from the correct Google Slide deck (see table, below) and add the following:
+[HW #3](assignments/HW3.qmd){target="_blank"}, asks you to draft all three required visualizations for your chosen [final project (HW #4)](assignments/HW4.qmd){target="_blank"} option. Find your assigned slide from the correct Google Slide deck (see table, under the [Discussion Materials](week7.qmd#discussion-materials) section, below) and add the following:
 
 <!-- plan to bring the following to discussion: -->
 <!-- (i.e. one of the three viz that will make up your infographic for [option 1](../assignments/HW4.qmd#option-1), *or* one of the three required viz for for [option 2](../assignments/HW4.qmd#option-1#option-2), *or*) -->
 
 1. ***one*** of your three visualizations
-2. the question that you're trying to answer with your visualization
+2. the question that you're using your visualization to answer
 
 <!-- Add your visualization and your question to the appropriate Google slide deck (each slide is labeled with a name) before section begins: -->
 
@@ -50,23 +50,21 @@ The visualization you bring should meet the [HW #3](assignments/HW3.qmd){target=
 
 ### B. Read up on how to give / receive feedback
 
-Giving, receiving *and* implementing feedback is an important part of any creative process (including building data visualizations!). **There are two "levels" of feedback:**
+Giving, receiving *and* implementing feedback is an important part of any creative process (including building data visualizations!). **Review the tips in the drop down, below:**
 
-- **high-level:** where the focus is on whether a data visualization is accurate, relevant and understandable for the intended audience
-- **detail-oriented:** where the focus is on aesthetics choices (e.g. colors, typefaces, layout, themes, white space, etc.) and how those choices help to enhance / tell the story
-
-[**This week, you should focus largely on providing *high-level* feedback (though suggestions on how to tweak the details of a visualization are welcome).**]{.teal-text}
+<!-- [**This week, you should focus largely on providing *high-level* feedback (though suggestions on how to tweak the details of a visualization are welcome).**]{.teal-text} -->
 
 ::: {.callout-tip collapse=true}
 ## Important tips for giving / receiving / implementing feedback:
 
-The following tips were adapted from this [LinkedIn article](https://www.linkedin.com/advice/0/how-do-you-improve-your-data-visualizations-feedback){target="_blank"}.
+The following tips were largely adapted from this [LinkedIn article](https://www.linkedin.com/advice/0/how-do-you-improve-your-data-visualizations-feedback){target="_blank"}.
 
 **For giving feedback**:
 
 - focus on the strengths / weakness of the visualization itself, not the person who created it
 - balance positive and negative feedback, and start with the positives!
 - stay objective when suggesting improvements (e.g. "This part might benefit from some clarity...")
+- be specific (e.g. instead of saying, "This chart is confusing," point out exactly what is unclear or misleading)
 - suggest actionable solutions and / or alternatives, rather than only problems or criticisms
 
 **For receiving feedback**:
@@ -84,28 +82,27 @@ The following tips were adapted from this [LinkedIn article](https://www.linkedi
 - seek new feedback!
 :::
 
-Here are some great supplementary resources:
+**Please also read the following articles on critiquing data viz:**
 
 - [Design and Redesign](https://medium.com/@hint_fm/design-and-redesign-4ab77206cf9){target="_blank"}, by Fernanda Viégas & Martin Wattenberg
-- [A Better Path Toward Criticizing Data Visualizations](https://policyviz.com/2023/02/01/a-better-path-toward-criticizing-data-visualization/){target="_blank"}, by Colin Mcnamara
-- [The beauty of data visualization](https://www.ted.com/talks/david_mccandless_the_beauty_of_data_visualization?referrer=playlist-making_sense_of_too_much_data){target="_blank"}, a TED Talk by [David McCandless](https://davidmccandless.com/){target="_blank"} (founder of [information is beautiful](https://informationisbeautiful.net/){target="_blank"}) -- this is a fun watch!
+- [A Better Path Toward Criticizing Data Visualizations](https://policyviz.com/2023/02/01/a-better-path-toward-criticizing-data-visualization/){target="_blank"}, on PolicyViz
 
 ## {{< fa comments title="two speech bubbles" >}} Discussion Materials {#discussion-materials}
 
-*Coming soon!*
-
-In pairs, spend 5 minutes reviewing a partner's viz and jot down some feedback.
-Spend 5 minutes discussing your feedback with your partner. Do the reverse (another 5 minutes)
-last ? min of class, rapid fire 1 thing we love 1 thing to improve
+| {{< fa person-chalkboard title="A person motioning at a chalkboard" >}} Discussion Slides | {{< fa file-code title="A code file" >}} Exercise instructions | {{< fa key title="A key" >}} Exercise solutions |
+|-------------------|-------------------|--------------|
+| [D7 slides: critiquing data viz](discussion/week7/week7-slides.qmd){target="_blank"} | *NA* | *NA* |
+| Google Slides for the [1pm Section](https://docs.google.com/presentation/d/1Rcwv4H5TVWyYGorkNV6zhAtBqo3_7A2ndXoeAe8VdlI/edit?usp=sharing){target="_blank"} & [2pm Section](https://docs.google.com/presentation/d/1RpOUikXIxE0S5PU7PWJOwKMvopxi1tltO6FVFlkOoMQ/edit?usp=sharing){target="_blank"} | *NA* | *NA* |
+: {.hover .bordered tbl-colwidths="[50,25,25]"} 
 
 ## {{< fa pencil title="pencil" >}} Assignment Reminders {#assignment-reminders}
 
 | Assignment Type | Assignment Title       | Date Assigned  | Date Due                   |
 |-----------------|------------------------|----------------|----------------------------|
-| HW              | Homework Assignment #3 | Tue 02/25/2025 | Sat 02/22/2025, 11:59pm PT |
+| HW              | Homework Assignment #3 | Tue 02/11/2025 | Tue 02/25/2025, 11:59pm PT |
 : {.hover .bordered tbl-colwidths="[20,30,20,30]"}
 
 <!-- | Assignment Type | Assignment Title                                      | Date Assigned  | Date Due                    | -->
 <!-- |-----------------|-------------------------------------------------------|----------------|-----------------------------| -->
-<!-- | HW              | [Homework Assignment #3](assignments/HW3.qmd)      | Tue 02/11/2025 | Sat Tue 02/25/2025, 11:59pm PT | -->
+<!-- | HW              | [Homework Assignment #3](assignments/HW3.qmd)      | Tue 02/11/2025 | Tue 02/25/2025, 11:59pm PT | -->
 <!-- : {.hover .bordered tbl-colwidths="[20,30,20,30]"} -->
