added similar materials for week 8 discussion

--- a/course-materials/week8.qmd
+++ b/course-materials/week8.qmd
@@ -21,9 +21,7 @@ knitr::include_graphics(here::here("images", "horst-eco-r4ds.png"))
 
 ## {{< fa clipboard-list title="a clipboard with a To Do list" >}} Pre-class Prep {#pre-class-prep}
 
-*Coming soon!*
-
-<!-- *No pre-class prep necessary this week!*  -->
+*No pre-class prep necessary this week!*
 
 ## {{< fa person-chalkboard title="a person pointing at a chalkboard" >}} Lecture Materials {#lecture-materials}
 
@@ -33,41 +31,28 @@ knitr::include_graphics(here::here("images", "horst-eco-r4ds.png"))
 | [Lecture 8.2: people as data](lecture-slides/lecture8.2-people-as-data-slides.qmd){target="_blank"} | *NA* | *NA* |
 : {.hover .bordered tbl-colwidths="[50,25,25]"} 
 
-<!-- ::: {.grid} -->
+## {{< fa clipboard-list title="a clipboard with a To Do list" >}} Pre-discussion Prep {#pre-discussion-prep} 
+Similar to last week's discussion, we'll be discussing progress on our data visualizations and providing constructive feedback to one another.  
 
-<!-- ::: {.g-col-12 .g-col-md-6} -->
-<!-- ::: {.center-text} -->
-<!-- [**Data storytelling**]{.teal-text .body-text-m} -->
+### A. Prepare your data viz slide 
 
-<!-- [{{< fa person-chalkboard title="A person motioning at a chalkboard" >}} lecture 8.1 slides](lecture-slides/week8.1-data-stories-slides.qmd){.btn role="button" target="_blank"}  -->
-<!-- ::: -->
-<!-- ::: -->
+Find your assigned slide from the correct Google Slide deck (see table, under the [Discussion Materials](week8.qmd#discussion-materials) section, below) and add the following:
 
-<!-- ::: {.g-col-12 .g-col-md-6} -->
-<!-- ::: {.center-text} -->
-<!-- [**People as data**]{.teal-text .body-text-m} -->
-
-<!-- [{{< fa person-chalkboard title="A person motioning at a chalkboard" >}} lecture 8.2 slides](lecture-slides/week8.2-people-as-data-slides.qmd){.btn role="button" target="_blank"}  -->
-<!-- ::: -->
-<!-- ::: -->
-
-<!-- ::: -->
+1. ***(a different) one*** of your three visualizations (i.e. don't choose the same viz that you brought to last discussion section)
+2. the question that you're using your visualization to answer
 
 ## {{< fa comments title="two speech bubbles" >}} Discussion Materials {#discussion-materials}
 
-*Coming soon!*
+::: {.callout-important}
+## TODO 
+update D8 slides with tip
+:::
 
-<!-- Similar to [last week's section](https://samanthacsik.github.io/EDS-240-data-viz/course-materials/week7.html#discussion-materials), we'll be discussing progress on our data visualizations and providing constructive feedback to one another. Please plan to bring the following to discussion: -->
-
-<!-- - **one** of your two remaining visualizations (i.e. not the one you brought to section last week) -->
-<!-- - the question that you're trying to answer -->
-
-<!-- Add your visualization and your question to the appropriate Google slide deck (each slide is labeled with a name) before section begins: -->
-
-<!-- - [10am section slides](https://docs.google.com/presentation/d/1yMazygIdqDcR2J4wlPmPZ9ao40kHE9QmXHFgK7LTNbY/edit?usp=sharing) -->
-<!-- - [11am section slides](https://docs.google.com/presentation/d/1Y4Tf6j4ub8cU9hqp61J1sa31hQidlkIIPhvXVjuZNhU/edit?usp=sharing) -->
-
-<!-- You should be prepared to discuss your design choices and receive constructive feedback from your peers. Be sure to review [the tips](https://samanthacsik.github.io/EDS-240-data-viz/course-materials/week7.html#how-to-give-receive-feedback) on how to give, receive, and  implement feedback. -->
+| {{< fa person-chalkboard title="A person motioning at a chalkboard" >}} Discussion Slides | {{< fa file-code title="A code file" >}} Exercise instructions | {{< fa key title="A key" >}} Exercise solutions |
+|-------------------|-------------------|--------------|
+| [D8 slides: critiquing data viz](discussion/week8/week8-slides.qmd){target="_blank"} | *NA* | *NA* |
+| Google Slides for the [1pm Section](https://docs.google.com/presentation/d/17Z_pnnxaMxo3ssNRJJnPa1G4LImr4dZ1IWOkRMkVV6I/edit?usp=sharing){target="_blank"} & [2pm Section](https://docs.google.com/presentation/d/19yROrzmeanWq48UNWFhABkQkGSa1IkyhyOz45n0TP9A/edit?usp=sharing){target="_blank"} | *NA* | *NA* |
+: {.hover .bordered tbl-colwidths="[50,25,25]"} 
 
 ## {{< fa pencil title="pencil" >}} Assignment Reminders {#assignment-reminders}
 
