--- a/course-materials/discussion/week8/week8-slides.qmd
+++ b/course-materials/discussion/week8/week8-slides.qmd
@@ -13,13 +13,13 @@ editor_options:
 
 ## {#title-slide data-menu-title="Title Slide" background="#047C91"} 
 
-[EDS 240: Discussion 7]{.custom-title}
+[EDS 240: Discussion 8]{.custom-title}
 
 [*Peer feedback*]{.custom-subtitle}
 
 <hr class="hr-dark-blue">
 
-[Week 7 | February 18^th^, 2024]{.custom-subtitle3}
+[Week 8 | February 25^th^, 2024]{.custom-subtitle3}
 
 ---
 
@@ -114,8 +114,4 @@ countdown::countdown(
 
 <hr>
 
-::: {.center-text .body-text-m}
-Consider how adding context can make your visualization more compelling / tell a more complete story
-:::
-
-{{< video https://www.youtube.com/watch?v=5Zg-C8AAIGg width="100%" height="65%" >}}
+tbd
