added week 9 discussion section material outline (need to add slides still); added course materials page for week 5 make up class with Alex + week 11 final presentations

--- a/course-materials/discussion/week7/week7-slides.qmd
+++ b/course-materials/discussion/week7/week7-slides.qmd
@@ -110,7 +110,7 @@ countdown::countdown(
 
 ## {#context data-menu-title="Reminder: context is important"}
 
-[Data viz tip / reminder of the week]{.slide-title}
+[Data viz thought exercise of the week]{.slide-title}
 
 <hr>
 
