--- a/course-materials/discussion/week8/week8-slides.qmd
+++ b/course-materials/discussion/week8/week8-slides.qmd
@@ -110,8 +110,13 @@ countdown::countdown(
 
 ## {#context data-menu-title="Reminder: context is important"}
 
-[Data viz tip / reminder of the week]{.slide-title}
+[Data viz thought exercise of the week]{.slide-title}
 
 <hr>
 
-tbd
+::: {.center-text .body-text-m}
+Learn some simple tips on questioning, interpreting, and truly understanding what numbers are saying
+:::
+
+{{< video https://www.youtube.com/watch?v=Zwwanld4T1w width="100%" height="65%" >}}
+
