--- a/course-materials/week9.qmd
+++ b/course-materials/week9.qmd
@@ -41,9 +41,23 @@ knitr::include_graphics(here::here("images", "observable.png"))
 <!-- - [Add JavaScript to your dataviz toolkit with Observable Plot: Learner Version](https://observablehq.com/@observablehq/r-ladies-observable-plot-feb-2023-learner-version), by Allison Horst & Ananya Roy -- materials from R-Ladies Santa Barbara meetup (2023-05-24) -->
 <!-- - [Intro to Observable Plot: Exploring Taylor Swift Songs with Observable Plot](https://github.com/tashapiro/intro-observable?tab=readme-ov-file), by Tanya Shapiro -- materials from R-Ladies Philly workshop (2023-11-09) -->
 
+## {{< fa clipboard-list title="a clipboard with a To Do list" >}} Pre-discussion Prep {#pre-discussion-prep} 
+Similar to last week's discussion, we'll be discussing progress on our data visualizations and providing constructive feedback to one another.  
+
+### A. Prepare your data viz slide 
+
+Find your assigned slide from the correct Google Slide deck (see table, under the [Discussion Materials](week9.qmd#discussion-materials) section, below) and add the following:
+
+1. ***(the final) one*** of your three visualizations (i.e. don't choose the same viz that you brought to the last two discussion section)
+2. the question that you're using your visualization to answer
+
 ## {{< fa comments title="two speech bubbles" >}} Discussion Materials {#discussion-materials}
 
-*No discussion section this week!*
+| {{< fa person-chalkboard title="A person motioning at a chalkboard" >}} Discussion Slides | {{< fa file-code title="A code file" >}} Exercise instructions | {{< fa key title="A key" >}} Exercise solutions |
+|-------------------|-------------------|--------------|
+| [D9 slides: critiquing data viz](discussion/week9/week9-slides.qmd){target="_blank"} | *NA* | *NA* |
+| Google Slides for the [1pm Section](https://docs.google.com/presentation/d/1OSxYGx0dAsRjPEjsBseRuzkTOys-vAIA1W7wfdXIV68/edit?usp=sharing){target="_blank"} & [2pm Section](https://docs.google.com/presentation/d/1w3D_DKiVR-nMtmIseYp5SCJvnv40YHa5jb_sBJnZDME/edit?usp=sharing){target="_blank"} | *NA* | *NA* |
+: {.hover .bordered tbl-colwidths="[50,25,25]"} 
 
 ## {{< fa pencil title="pencil" >}} Assignment Reminders {#assignment-reminders}
 
